[package]
name = "oculussdk-sys"
version = "0.1.0"
authors = ["Nanopro <nanopro1g@gmail.com>"]
edition = "2018"
description = """
Raw bindings to libOVR, the Oculus Rift PC runtime library.
"""
keywords = ["oculus", "rift", "libovr", "vr", "ovr"]
repository = "https://github.com/Nanopro/oculussdk-sys"
license = "MIT / Apache-2.0"

[dependencies]
